# pricewatch

./: .gitignore  DEPLOY-RUNBOOK.md  Dockerfile  README.md  alembic.ini  deploy_aws.sh  docker-compose.yml  pyproject.toml  server_bootstrap.sh
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: main.py
app/core/: config.py  deps.py  logging.py  rate_limit.py  security.py
app/db/: base.py  session.py
app/jobs/: scheduler.py  tasks.py
app/models/: __init__.py  alert.py  price_history.py  product.py  user.py  watchlist.py
app/repositories/: alert_repo.py  product_repo.py  user_repo.py  watchlist_repo.py
app/routers/: admin.py  alerts.py  auth.py  health.py  products.py  users.py  watchlist.py
app/schemas/: alert.py  auth.py  product.py  user.py  watchlist.py
app/scrapers/: base.py  net_scraper.py  uniqlo.py
app/services/: alert_service.py  auth_service.py  ingest_service.py  notify_service.py  watchlist_service.py
deploy/: Caddyfile.fragment
docs/: BLUEPRINT.md  DEPLOY.md  env.example.txt
frontend/: README.md  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: ErrorMessage.tsx  NavBar.tsx  PriceHistoryModal.tsx  ProductCard.tsx  Spinner.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: AlertsPage.tsx  (+3 more)
tests/: conftest.py  factories.py  test_alert_service.py  test_auth.py  test_integration_pipeline.py  test_notify_service.py  test_products_alerts_api.py  test_watchlist_api.py
