[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pricewatch"
version = "0.1.0"
description = "Production-grade price tracking backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "sqlmodel>=0.0.18",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
    "argon2-cffi>=23.0",
    "PyJWT>=2.8",
    "uvicorn[standard]>=0.29",
    "slowapi>=0.1.9",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["B008"]  # FastAPI uses Depends() as default value

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
